[package]
name = "sql-book"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["dialog-confirm", "dialog-message", "dialog-open", "dialog-save", "fs-create-dir", "fs-exists", "fs-read-file", "fs-remove-file", "fs-write-file", "os-all", "path-all", "process-command-api", "shell-open", "shell-sidecar", "window-close", "window-set-always-on-top"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
